// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line chart table suite 1 Indicator, 1 Area snapshot test - should match snapshot 1`] = `
<DocumentFragment>
  .c2 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
  font-weight: 700;
}

.c2:last-child {
  padding-right: 0;
}

.c12 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: right;
  font-family: "ntatabularnumbers","nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
}

.c12:last-child {
  padding-right: 0;
}

.c15 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
}

.c15:last-child {
  padding-right: 0;
}

.c1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  margin-bottom: 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.25;
  font-weight: bold;
  padding: 0.625em 0;
}

.c7 {
  text-align: right;
  padding-right: 10px;
}

.c4 {
  text-align: left;
}

.c6 {
  width: 10%;
  padding: 1em 0;
}

.c10 {
  width: 15%;
}

.c9 {
  width: 18%;
  padding: 0.5em;
}

.c8 {
  background-color: #b1b4b6;
  border-top: solid #F3F2F1 2px;
  width: 16%;
}

.c13 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.25;
  padding-right: 0;
}

.c14 {
  text-align: left;
  width: 10%;
}

.c17 {
  text-align: right;
  padding-right: 10px;
}

.c18 {
  background-color: #b1b4b6;
  border-top: solid #F3F2F1 2px;
}

.c11 {
  display: block;
}

.c5 {
  border: none;
}

.c16 {
  border-left: none;
}

@media print {
  .c12 {
    font-family: sans-serif;
  }
}

@media print {
  .c1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c1 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 30px;
  }
}

@media print {
  .c3 {
    font-size: 12px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c3 {
    font-size: 14px;
    line-height: 1.4285714285714286;
  }
}

@media print {
  .c13 {
    font-size: 12px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c13 {
    font-size: 14px;
    line-height: 1.4285714285714286;
  }
}

<div
    class="c0"
    data-testid="lineChartTable-component"
  >
    <table
      class="c1 "
    >
      <thead
        class=""
      >
        <tr
          class=""
        >
          <th
            class="c2 4 c3 c4 c5"
            colspan="6"
          >
            Greater Manchester ICB - 00T recent trend:
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c2"
          />
          <th
            class="c2 c3 c4 c6"
            colspan="5"
          >
            Greater Manchester ICB - 00T
          </th>
          <th
            class="c2 c3 c7 c8"
            data-testid="england-header"
          >
            Benchmark: 
            <br />
             England
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c2"
            colspan="5"
          />
          <th
            class="c2 c3 c4 c9"
          >
            95% confidence limits
          </th>
          <th
            class="c2 c3 c7 c8"
          />
        </tr>
        <tr
          class=""
        >
          <th
            class="c2 c3 c4"
            data-testid="header-Period-0"
          >
            Period
          </th>
          <th
            class="c2 c3 c4 c10"
            data-testid="header-Compared to benchmark-1"
          >
            Compared to benchmark
          </th>
          <th
            class="c2 c3 c7"
            data-testid="header-Count-2"
          >
            Count
          </th>
          <th
            class="c2 c3 c7"
            data-testid="header-Value-3"
          >
            Value 
            <span
              class="3 c11"
            >
              (%)
            </span>
          </th>
          <th
            class="c2 c3 c7"
            data-testid="header-Lower-4"
          >
            Lower 
            <span
              class="3 c11"
            >
              (%)
            </span>
          </th>
          <th
            class="c2 c3 c7"
            data-testid="header-Upper-5"
          >
            Upper 
            <span
              class="3 c11"
            >
              (%)
            </span>
          </th>
          <th
            class="c2 c3 c7 c8"
            data-testid="header-Value -6"
          >
            Value  
            <span
              class="3 c11"
            >
              (%)
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class=""
        >
          <td
            class="0 c12 c13 c14"
          >
            2004
          </td>
          <td
            class="0 5 c15 c13 c14 c16"
          />
          <td
            class="1 c12 c13 c17"
          >
            267
          </td>
          <td
            class="1 c12 c13 c17"
          >
            7.0%
          </td>
          <td
            class="1 c12 c13 c17"
          >
            4.4%
          </td>
          <td
            class="1 c12 c13 c17"
          >
            5.8%
          </td>
          <td
            class="1 2 c15 c13 c17 c18"
            data-testid="grey-table-cell"
          >
            9.0%
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class="0 c12 c13 c14"
          >
            2008
          </td>
          <td
            class="0 5 c15 c13 c14 c16"
          />
          <td
            class="1 c12 c13 c17"
          >
            222
          </td>
          <td
            class="1 c12 c13 c17"
          >
            8.9%
          </td>
          <td
            class="1 c12 c13 c17"
          >
            4.4%
          </td>
          <td
            class="1 c12 c13 c17"
          >
            5.8%
          </td>
          <td
            class="1 2 c15 c13 c17 c18"
            data-testid="grey-table-cell"
          >
            9.7%
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`Line chart table suite 1 Indicator, 2 Areas snapshot test - should match snapshot 1`] = `
<DocumentFragment>
  .c2 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
  font-weight: 700;
}

.c2:last-child {
  padding-right: 0;
}

.c12 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: right;
  font-family: "ntatabularnumbers","nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
}

.c12:last-child {
  padding-right: 0;
}

.c15 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
}

.c15:last-child {
  padding-right: 0;
}

.c1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  margin-bottom: 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.25;
  font-weight: bold;
  padding: 0.625em 0;
}

.c7 {
  text-align: right;
  padding-right: 10px;
}

.c4 {
  text-align: left;
}

.c6 {
  width: 10%;
  padding: 1em 0;
}

.c10 {
  width: 15%;
}

.c9 {
  width: 18%;
  padding: 0.5em;
}

.c8 {
  background-color: #b1b4b6;
  border-top: solid #F3F2F1 2px;
  width: 16%;
}

.c13 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.25;
  padding-right: 0;
}

.c14 {
  text-align: left;
  width: 10%;
}

.c17 {
  text-align: right;
  padding-right: 10px;
}

.c18 {
  background-color: #b1b4b6;
  border-top: solid #F3F2F1 2px;
}

.c11 {
  display: block;
}

.c5 {
  border: none;
}

.c16 {
  border-left: solid black 1px;
}

@media print {
  .c12 {
    font-family: sans-serif;
  }
}

@media print {
  .c1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c1 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 30px;
  }
}

@media print {
  .c3 {
    font-size: 12px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c3 {
    font-size: 14px;
    line-height: 1.4285714285714286;
  }
}

@media print {
  .c13 {
    font-size: 12px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c13 {
    font-size: 14px;
    line-height: 1.4285714285714286;
  }
}

<div
    class="c0"
    data-testid="lineChartTable-component"
  >
    <table
      class="c1 "
    >
      <thead
        class=""
      >
        <tr
          class=""
        >
          <th
            class="c2 4 c3 c4 c5"
            colspan="6"
          >
            Greater Manchester ICB - 00T recent trend:
          </th>
          <th
            class="c2 4 c3 c4 c5"
            colspan="6"
          >
            South FooBar recent trend:
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c2"
          />
          <th
            class="c2 c3 c4 c6"
            colspan="5"
          >
            Greater Manchester ICB - 00T
          </th>
          <th
            class="c2 c3 c4 c6"
            colspan="5"
          >
            South FooBar
          </th>
          <th
            class="c2 c3 c7 c8"
            data-testid="england-header"
          >
            Benchmark: 
            <br />
             England
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c2"
            colspan="5"
          />
          <th
            class="c2 c3 c4 c9"
          >
            95% confidence limits
          </th>
          <th
            class="c2"
            colspan="4"
          />
          <th
            class="c2 c3 c4 c9"
          >
            95% confidence limits
          </th>
          <th
            class="c2 c3 c7 c8"
          />
        </tr>
        <tr
          class=""
        >
          <th
            class="c2 c3 c4"
            data-testid="header-Period-0"
          >
            Period
          </th>
          <th
            class="c2 c3 c4 c10"
            data-testid="header-Compared to benchmark-1"
          >
            Compared to benchmark
          </th>
          <th
            class="c2 c3 c7"
            data-testid="header-Count-2"
          >
            Count
          </th>
          <th
            class="c2 c3 c7"
            data-testid="header-Value-3"
          >
            Value 
            <span
              class="3 c11"
            >
              (%)
            </span>
          </th>
          <th
            class="c2 c3 c7"
            data-testid="header-Lower-4"
          >
            Lower 
            <span
              class="3 c11"
            >
              (%)
            </span>
          </th>
          <th
            class="c2 c3 c7"
            data-testid="header-Upper-5"
          >
            Upper 
            <span
              class="3 c11"
            >
              (%)
            </span>
          </th>
          <th
            class="c2 c3 c4 c10"
            data-testid="header-Compared to benchmark-1"
          >
            Compared to benchmark
          </th>
          <th
            class="c2 c3 c7"
            data-testid="header-Count-2"
          >
            Count
          </th>
          <th
            class="c2 c3 c7"
            data-testid="header-Value-3"
          >
            Value 
            <span
              class="3 c11"
            >
              (%)
            </span>
          </th>
          <th
            class="c2 c3 c7"
            data-testid="header-Lower-4"
          >
            Lower 
            <span
              class="3 c11"
            >
              (%)
            </span>
          </th>
          <th
            class="c2 c3 c7"
            data-testid="header-Upper-5"
          >
            Upper 
            <span
              class="3 c11"
            >
              (%)
            </span>
          </th>
          <th
            class="c2 c3 c7 c8"
            data-testid="header-Value -6"
          >
            Value  
            <span
              class="3 c11"
            >
              (%)
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class=""
        >
          <td
            class="0 c12 c13 c14"
          >
            2004
          </td>
          <td
            class="0 5 c15 c13 c14 c16"
          />
          <td
            class="1 c12 c13 c17"
          >
            267
          </td>
          <td
            class="1 c12 c13 c17"
          >
            7.0%
          </td>
          <td
            class="1 c12 c13 c17"
          >
            4.4%
          </td>
          <td
            class="1 c12 c13 c17"
          >
            5.8%
          </td>
          <td
            class="0 5 c15 c13 c14 c16"
          />
          <td
            class="1 c12 c13 c17"
          >
            222
          </td>
          <td
            class="1 c12 c13 c17"
          >
            1.4%
          </td>
          <td
            class="1 c12 c13 c17"
          >
            4.4%
          </td>
          <td
            class="1 c12 c13 c17"
          >
            5.8%
          </td>
          <td
            class="1 2 c15 c13 c17 c18"
            data-testid="grey-table-cell"
          >
            9.0%
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class="0 c12 c13 c14"
          >
            2008
          </td>
          <td
            class="0 5 c15 c13 c14 c16"
          />
          <td
            class="1 c12 c13 c17"
          >
            222
          </td>
          <td
            class="1 c12 c13 c17"
          >
            8.9%
          </td>
          <td
            class="1 c12 c13 c17"
          >
            4.4%
          </td>
          <td
            class="1 c12 c13 c17"
          >
            5.8%
          </td>
          <td
            class="0 5 c15 c13 c14 c16"
          />
          <td
            class="1 c12 c13 c17"
          >
            131
          </td>
          <td
            class="1 c12 c13 c17"
          >
            8.9%
          </td>
          <td
            class="1 c12 c13 c17"
          >
            4.4%
          </td>
          <td
            class="1 c12 c13 c17"
          >
            5.8%
          </td>
          <td
            class="1 2 c15 c13 c17 c18"
            data-testid="grey-table-cell"
          >
            9.7%
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
